clear button added to popup window

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,7 @@
         "storage",
         "activeTab"
     ],
+    "host_permissions": ["<all_urls>"],
     "action": {
         "default_popup": "popup.html"
     },
